Añadir CRUD para desarrolladores
